<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cst_bg_main">

    <FrameLayout
        android:id="@+id/game_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="72dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="28dp"
        android:padding="8dp">

        <com.android.boot.ui.GameView
            android:id="@+id/game_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/left_rail"
        style="@style/Widget.Game.Panel"
        android:layout_width="104dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_10"
        android:visibility="gone">

        <TextView
            android:id="@+id/bunker_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hud_bunker"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/morale_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/hud_morale"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/supply_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/hud_supplies"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_route_strip"
        style="@style/Widget.Game.Panel"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="112dp"
        android:layout_marginRight="136dp"
        android:layout_gravity="top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/cst_pad_12"
        android:paddingRight="@dimen/cst_pad_12"
        android:visibility="gone">

        <TextView
            android:id="@+id/wave_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_wave"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/status_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:layout_weight="1"
            android:text="@string/hud_status"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <Button
            android:id="@+id/pause_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pause" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_command_tray"
        style="@style/Widget.Game.Panel"
        android:layout_width="128dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_8"
        android:visibility="gone">

        <Button
            android:id="@+id/rifle_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rifle" />

        <Button
            android:id="@+id/gun_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_6"
            android:text="@string/btn_gun" />

        <Button
            android:id="@+id/sniper_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_6"
            android:text="@string/btn_sniper" />

        <Button
            android:id="@+id/engineer_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_6"
            android:text="@string/btn_engineer" />

        <Button
            android:id="@+id/mortar_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_6"
            android:text="@string/btn_mortar" />

        <Button
            android:id="@+id/signal_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_6"
            android:text="@string/btn_signal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/cst_pad_12" />

        <Button
            android:id="@+id/flare_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_flare" />

        <Button
            android:id="@+id/demo_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_6"
            android:text="@string/btn_demo" />

        <Button
            android:id="@+id/retreat_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_6"
            android:text="@string/btn_retreat" />

        <Button
            android:id="@+id/next_wave_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_10"
            android:text="@string/btn_next_wave" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:gravity="center"
            android:text="@string/subtitle_main"
            android:textAppearance="@style/TextAppearance.Game.Subtitle" />

        <Button
            android:id="@+id/start_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_20"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/help_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_how_to_play" />

        <Button
            android:id="@+id/sound_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_mute" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_how_to_play"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/help_text"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/help_back_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pause_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pause"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <Button
            android:id="@+id/resume_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_resume" />

        <Button
            android:id="@+id/restart_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_restart" />

        <Button
            android:id="@+id/menu_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:id="@+id/result_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:id="@+id/result_stats_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/hud_wave"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/result_restart_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_restart" />

        <Button
            android:id="@+id/result_menu_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_menu" />
    </LinearLayout>
</FrameLayout>
